test/conformance/chainsaw/exceptions/events-creation/chainsaw-step-02-apply-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: policy-exception-events-creation-polex-ns
