test/conformance/chainsaw/exceptions/events-creation/chainsaw-step-02-apply-2.yaml
apiVersion: kyverno.io/v2
kind: PolicyException
metadata:
  name: policy-exception-allow-latest
  namespace: policy-exception-events-creation-polex-ns
spec:
  exceptions:
  - policyName: disallow-latest-tag-events-creation
    ruleNames:
    - validate-image-tag
  match:
    any:
    - resources:
        namespaces:
        - policy-exception-events-creation-ns
