test/conformance/chainsaw/exceptions/events-creation/chainsaw-step-03-apply-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: policy-exception-events-creation-ns
