test/conformance/chainsaw/exceptions/events-creation/chainsaw-step-03-apply-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: policy-exception-events-creation-pod
  namespace: policy-exception-events-creation-ns
spec:
  containers:
  - image: nginx
    name: nginx
