test/conformance/chainsaw/exceptions/events-creation/05-assert.yaml
apiVersion: v1
involvedObject:
  apiVersion: kyverno.io/v2beta1
  kind: PolicyException
  name: policy-exception-allow-latest
  namespace: policy-exception-events-creation-polex-ns
kind: Event
metadata:
  namespace: policy-exception-events-creation-polex-ns
reason: PolicySkipped
reportingComponent: kyverno-admission
type: Normal
---
apiVersion: v1
involvedObject:
  apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  name: disallow-latest-tag-events-creation
kind: Event
metadata:
  namespace: default
reason: PolicySkipped
reportingComponent: kyverno-admission
type: Normal
