test/conformance/chainsaw/exceptions/events-creation/chainsaw-step-05-assert-1.yaml
apiVersion: v1
involvedObject:
  apiVersion: kyverno.io/v2beta1
  kind: PolicyException
  name: policy-exception-allow-latest
  namespace: policy-exception-events-creation-polex-ns
kind: Event
metadata:
  namespace: policy-exception-events-creation-polex-ns
reason: PolicySkipped
reportingComponent: kyverno-admission
type: Normal
