test/conformance/chainsaw/exceptions/events-creation/chainsaw-step-05-assert-2.yaml
apiVersion: v1
involvedObject:
  apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  name: disallow-latest-tag-events-creation
kind: Event
metadata:
  namespace: default
reason: PolicySkipped
reportingComponent: kyverno-admission
type: Normal
